reorganized some code and fixed countdown overlapping

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -37,7 +37,7 @@
 
 /* home */
 #home h1 {
-	font-size: 2.5rem;
+	font-size: 3rem;
 	margin-top: -3rem;
 }
 
@@ -163,7 +163,7 @@
 	}
 }
 
-@media (max-width: 380px) {
+@media (max-width: 400px) {
 	body {
 		line-height: 1.5;
 	}
